<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.2">
  <POU Name="P_AP1_Calibrartion" Id="{d1e3f63a-2203-42a3-a5b1-25305ed70471}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P_AP1_Calibrartion
VAR_INPUT
	//
	// INT 
	n_Step: INT := 0;	
END_VAR
VAR
	//
	// BOOL 
	b_Condition: BOOL;

	//
	// Timer
	t_AP1_Calibration_Time: TON; 
	
END_VAR

]]></Declaration>
    <Implementation>
      <ST><![CDATA[//***********************************************************************************
//
// ETH Zürich / Robotic Fabrication Lab
// HIB C 13 / Stefano-Franscini-Platz 1
// CH-8093 Zürich
// 
// ***********************************************************************************
// 
// PROJECT     :  A061 Inline Mixer
// 
// FUNCTION    :  Step chain for accelerator pump calibration
// 
// AUTHOR      :  Seyma Gürel / Philippe Fleischmann
// 
// EMAIL       :  sguerel@ethz.ch / fleischmann@arch.ehtz.ch
// 
// Copyright   :  ETH Zürich (CH) 2021
//
// ***********************************************************************************

//
// Initalization
IF n_Step=0 THEN
	//
	// Check condition 
	b_Condition:=TRUE;
	//
	// Do step
	IF b_Condition THEN
		b_Condition:=FALSE;
		n_Step:=10;
	END_IF
END_IF

//
// Wait for activating calibration
IF n_Step=10 THEN
	//
	// Check condition 
	b_Condition:= GVL_ResearchData.b_RED_Acceleration_Pump_Calibration_On;
	//
	// Do step
	IF b_Condition THEN
		b_Condition:=FALSE;
		n_Step:=20;
	END_IF
END_IF

//
// Wait for start 
IF n_Step=20 THEN
	//
	// Check condition 
	b_Condition:=GVL_IO.ib_AP1_Button_On;
	//
	// Do step
	IF b_Condition THEN
		b_Condition:=FALSE;
		n_Step:=30;
	END_IF
END_IF

//
// Run calibration until time is over 
IF n_Step=30 THEN
	//
	// Check condition 
	b_Condition:=t_AP1_Calibration_Time.Q; 
	//
	// Do step
	IF b_Condition THEN
		b_Condition:=FALSE;
		n_Step:=40;
	END_IF
END_IF

//
// Return to step 10 
IF n_Step=40 THEN
	//
	// Check condition 
	b_Condition:=TRUE;
	//
	// Do step
	IF b_Condition THEN
		b_Condition:=FALSE;
		//
		// Reset calibrarion on
		GVL_ResearchData.b_RED_Acceleration_Pump_Calibration_On:=FALSE;
		n_Step:=10;
	END_IF
END_IF

// ****************************************
// Timer
// ****************************************
t_AP1_Calibration_Time(
	IN:=n_Step=30,
	PT:=GVL_ResearchData.n_RED_Acceleration_Pump_Calibration_Time);

// ****************************************
// Reset
// ****************************************

IF GVL_ResearchData.b_RED_Acceleration_Pump_Calibration_On=FALSE THEN
  //
  // Rest step chain
  n_Step:=0;
END_IF
]]></ST>
    </Implementation>
    <LineIds Name="P_AP1_Calibrartion">
      <LineId Id="3" Count="7" />
      <LineId Id="160" Count="0" />
      <LineId Id="12" Count="2" />
      <LineId Id="161" Count="6" />
      <LineId Id="25" Count="29" />
      <LineId Id="253" Count="0" />
      <LineId Id="56" Count="24" />
      <LineId Id="95" Count="10" />
      <LineId Id="263" Count="2" />
      <LineId Id="106" Count="2" />
      <LineId Id="182" Count="0" />
      <LineId Id="110" Count="2" />
      <LineId Id="120" Count="0" />
      <LineId Id="270" Count="1" />
      <LineId Id="121" Count="0" />
      <LineId Id="272" Count="3" />
      <LineId Id="2" Count="0" />
      <LineId Id="281" Count="2" />
      <LineId Id="279" Count="0" />
      <LineId Id="276" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>