<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.2">
  <POU Name="P_Outputs_Manual" Id="{29a9fa82-67db-4e62-a260-6977b4aa95ba}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P_Outputs_Manual
VAR


END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//***********************************************************************************
//
// ETH Zürich / Robotic Fabrication Lab
// HIB C 13 / Stefano-Franscini-Platz 1
// CH-8093 Zürich
// 
// ***********************************************************************************
// 
// PROJECT     :  A061 Inline Mixer
// 
// FUNCTION    :  Outputs Manual Mode
// 
// AUTHOR      :  Fabio Scotto / Philippe Fleischmann
// 
// EMAIL       :  scotto@arch.ethz.ch / fleischmann@arch.ehtz.ch
// 
// Copyright   :  ETH Zürich (CH) 2020
//
// ***********************************************************************************


//
// Accelerator pump 1

//
// Power on
GVL_IO.ob_AP1_Power_On:=GVL_IO.ib_CC1_Button_Mode_Manual;

//
// Pressure okey always set to true
GVL_IO.ob_AP1_Pressure_Ok:=TRUE;

//
// Bucket not empty always set to true
GVL_IO.ob_AP1_Not_Empty:=TRUE;

//
// Pulse a preset amount not in use
GVL_IO.ob_AP1_Pulse:=FALSE;

//
// Start pump
IF 	   P_AP1_OnOff.n_Step=30 
	OR P_AP1_Calibrartion.n_Step=30
THEN
	//
	// Pump on
	GVL_IO.ob_AP1_Start:=TRUE;
ELSE
	//
	// Pump off
	GVL_IO.ob_AP1_Start:=FALSE;
END_IF

//
// Speed for pump
IF 	   P_AP1_Calibrartion.n_Step=20 
	OR P_AP1_Calibrartion.n_Step=30 
THEN
	//
	// Calibration Speed for pump
	GVL_IO.on_AP1_Speed:=GVL_ResearchData.n_RED_Acceleration_Pump_Calibration_Speed;
ELSE
	//
	// Process speed for pump
	GVL_IO.on_AP1_Speed:=F_ScalAnalogOut(
		n_Input:= REAL_TO_INT(GVL_ResearchData.n_RED_Acceleration_Pump_Flowrate),
		n_InMin:= 0, 
		n_InMax:= REAL_TO_INT(GVL_ResearchData.f_RED_Status_Acceleration_Pump_Max_Flowrate_ml_per_min), 
		n_OutMin:= 0, 
		n_OutMax:= 32767);
END_IF

// ***********************************************************************************
// Concrete Pump 1 
// ***********************************************************************************

//
// Start
IF  P_CP1_Enable.n_Step=20 THEN
	GVL_IO.ob_CP1_Start:=TRUE;
ELSE
	GVL_IO.ob_CP1_Start:=FALSE;
END_IF

//
// Stop
IF  P_CP1_Enable.n_Step=40 THEN
	GVL_IO.ob_CP1_Stop:=TRUE;
ELSE
	GVL_IO.ob_CP1_Stop:=FALSE;
END_IF

//
// Forward
GVL_IO.ob_CP1_Forward:=GVL_ResearchData.b_RED_Concrete_Pump_Forward_On;

//
// Backward
GVL_IO.ob_CP1_Backward:=GVL_ResearchData.b_RED_Concrete_Pump_Backward_On;

//
// Concrete pump speed  0 (0V) to 75 rpm (10V)
GVL_IO.on_CP1_Speed:=F_ScalAnalogOut(
	n_Input:=GVL_ResearchData.n_RED_Concrete_Pump_Speed, 
	n_InMin:=0, 
	n_InMax:=75, 
	n_OutMin:=0, 
	n_OutMax:=32767);

]]></ST>
    </Implementation>
    <LineIds Name="P_Outputs_Manual">
      <LineId Id="3" Count="7" />
      <LineId Id="138" Count="0" />
      <LineId Id="12" Count="2" />
      <LineId Id="139" Count="4" />
      <LineId Id="20" Count="2" />
      <LineId Id="42" Count="0" />
      <LineId Id="81" Count="0" />
      <LineId Id="144" Count="0" />
      <LineId Id="154" Count="0" />
      <LineId Id="153" Count="0" />
      <LineId Id="155" Count="0" />
      <LineId Id="148" Count="0" />
      <LineId Id="158" Count="0" />
      <LineId Id="156" Count="1" />
      <LineId Id="146" Count="0" />
      <LineId Id="161" Count="0" />
      <LineId Id="159" Count="1" />
      <LineId Id="147" Count="0" />
      <LineId Id="162" Count="2" />
      <LineId Id="149" Count="0" />
      <LineId Id="166" Count="2" />
      <LineId Id="199" Count="1" />
      <LineId Id="210" Count="0" />
      <LineId Id="201" Count="0" />
      <LineId Id="212" Count="0" />
      <LineId Id="209" Count="0" />
      <LineId Id="204" Count="2" />
      <LineId Id="211" Count="0" />
      <LineId Id="208" Count="0" />
      <LineId Id="169" Count="2" />
      <LineId Id="180" Count="0" />
      <LineId Id="197" Count="0" />
      <LineId Id="213" Count="0" />
      <LineId Id="193" Count="1" />
      <LineId Id="190" Count="0" />
      <LineId Id="177" Count="0" />
      <LineId Id="189" Count="0" />
      <LineId Id="195" Count="0" />
      <LineId Id="224" Count="0" />
      <LineId Id="229" Count="0" />
      <LineId Id="226" Count="2" />
      <LineId Id="214" Count="0" />
      <LineId Id="186" Count="0" />
      <LineId Id="241" Count="0" />
      <LineId Id="276" Count="18" />
      <LineId Id="249" Count="7" />
      <LineId Id="267" Count="8" />
      <LineId Id="184" Count="0" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>